feat(post): add save post

--- a/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.html
+++ b/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.html
@@ -1,4 +1,4 @@
-<mix-content-detail-container>
+<mix-content-detail-container (save)="savePost()">
   <div class="post-detail">
     <tui-tabs class="custom-tabs"
               [(activeItemIndex)]="activeTabIndex">
