--- a/libs/mix.share/src/components/content-detail-container/content-detail-container.component.html
+++ b/libs/mix.share/src/components/content-detail-container/content-detail-container.component.html
@@ -9,6 +9,7 @@
 
     <button class="action"
             [size]="'s'"
+            (click)="onSave()"
             tuiButton>Save</button>
   </div>
 
