feat(post): add edit post

--- a/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.html
+++ b/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.html
@@ -2,16 +2,24 @@
   <div class="post-detail">
     <tui-tabs class="custom-tabs"
               [(activeItemIndex)]="activeTabIndex">
-      <button tuiTab>
+      <button [disabled]="!!(loading$ | async)"
+              (click)="activeTabIndex = 0"
+              tuiTab>
         Content
       </button>
-      <button tuiTab>
+      <button [disabled]="!!(loading$ | async)"
+              (click)="activeTabIndex = 1"
+              tuiTab>
         SEO
       </button>
-      <button tuiTab>
+      <button [disabled]="!!(loading$ | async)"
+              (click)="activeTabIndex = 2"
+              tuiTab>
         Related
       </button>
-      <button tuiTab>
+      <button [disabled]="!!(loading$ | async)"
+              (click)="activeTabIndex = 3"
+              tuiTab>
         Parent
       </button>
     </tui-tabs>
@@ -41,6 +49,37 @@
                                 formControlName="content"></mix-rich-text-editor>
         </div>
       </div>
+
+      <div *ngIf="activeTabIndex === 1"
+           class="post-detail__main-widget"
+           [formGroup]="form">
+        <div class="mix-form__row">
+          <mix-input-labeled [label]="'Friendly Title'"
+                             formControlName="seoTitle"></mix-input-labeled>
+        </div>
+
+        <div class="mix-form__row">
+          <mix-input-labeled [label]="'Friendly Urls'"
+                             formControlName="seoName"></mix-input-labeled>
+        </div>
+
+        <div class="mix-form__row">
+          <mix-input-labeled [label]="'Meta Description'"
+                             [type]="'text-area'"
+                             formControlName="seoDescription"></mix-input-labeled>
+        </div>
+
+        <div class="mix-form__row">
+          <mix-input-labeled [label]="'SEO Keywords'"
+                             [type]="'text-area'"
+                             formControlName="seoKeywords"></mix-input-labeled>
+        </div>
+      </div>
     </ng-template>
+
+    <div *ngIf="activeTabIndex === 2"
+         class="post-detail__main-widget">
+      <mix-post-nav-selected [selectedPosts]="selectedPostNavs"></mix-post-nav-selected>
+    </div>
   </div>
 </mix-content-detail-container>
