--- a/apps/mix-portal/src/styles/variables.scss
+++ b/apps/mix-portal/src/styles/variables.scss
@@ -6,6 +6,6 @@
     'Droid Sans', 'Helvetica Neue', sans-serif;
   --sidebar-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  --mix-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  --mix-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   --mix-border-radius-01: 10px;
 }
