--- a/apps/mix-portal/src/styles.scss
+++ b/apps/mix-portal/src/styles.scss
@@ -14,6 +14,7 @@ body {
 body {
   margin: 0 !important;
   padding: 0 !important;
+  background-color: #fff;
 }
 
 .cdk-drag-preview {
@@ -44,7 +45,7 @@ i-tabler {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-track {
