--- a/libs/mix.ui/src/lib/rich-text-editor/rich-text-editor.component.html
+++ b/libs/mix.ui/src/lib/rich-text-editor/rich-text-editor.component.html
@@ -1,6 +1,7 @@
 <label [label]="label + ':'"
        tuiLabel>
   <tui-editor class="editor"
+              [disabled]="disabled"
               [ngModel]="value"
               (ngModelChange)="onValueChange($event)"
               new>
