--- a/libs/mix.ui/src/lib/input-labeled/input-labeled.component.html
+++ b/libs/mix.ui/src/lib/input-labeled/input-labeled.component.html
@@ -1,12 +1,14 @@
 <label [label]="label + ':'"
        tuiLabel>
   <tui-input *ngIf="type === 'text'"
+             [disabled]="disabled"
              [ngModel]="value"
              [tuiTextfieldLabelOutside]="true"
              (ngModelChange)="onValueChange($event)"
              tuiTextfieldSize="m"> </tui-input>
 
   <tui-text-area *ngIf="type === 'text-area'"
+                 [disabled]="disabled"
                  [ngModel]="value"
                  [tuiTextfieldLabelOutside]="true"
                  (ngModelChange)="onValueChange($event)"></tui-text-area>
