feat(post): add edit post detail

--- a/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.html
+++ b/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.html
@@ -116,6 +116,7 @@
           {{ item.fileName }}
         </ng-template>
 
+        <p style="margin-top: 15px;"> Post code preview: </p>
         <mix-template-editor *ngIf="selectedTemplate"
                              [disabled]="true"
                              [templateId]="selectedTemplate.id"></mix-template-editor>
