feat(editor): new template editor ui

--- a/libs/mix.share/src/components/content-detail-container/content-detail-container.component.html
+++ b/libs/mix.share/src/components/content-detail-container/content-detail-container.component.html
@@ -8,6 +8,8 @@
     </div>
 
     <button class="action"
+            [style.width]="'100px'"
+            [icon]="'tuiIconExternal'"
             [size]="'s'"
             (click)="onSave()"
             tuiButton>Save</button>
