--- a/libs/mix.ui/src/lib/code-editor/code-editor.component.scss
+++ b/libs/mix.ui/src/lib/code-editor/code-editor.component.scss
@@ -4,6 +4,7 @@
   overflow: auto;
 
   ngx-monaco-editor {
-    height: calc(100vh - var(--mix-header-height) - var(--tui-height-l) - 2rem);
+    // height: calc(100vh - var(--mix-header-height) - var(--tui-height-l) - 2rem);
+    height: 400px;
   }
 }
