--- a/libs/mix.share/src/components/content-detail-container/content-detail-container.component.scss
+++ b/libs/mix.share/src/components/content-detail-container/content-detail-container.component.scss
@@ -11,7 +11,7 @@
     background-color: #f0f4f9;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding: 5px 15px;
     border-bottom: 1px solid var(--tui-base-04);
     height: var(--mix-header-height);
