--- a/libs/mix.share/src/components/template-editor/template-editor.component.scss
+++ b/libs/mix.share/src/components/template-editor/template-editor.component.scss
@@ -1,20 +1,81 @@
 .template-editor {
-  background-color: var(--tui-base-07);
-  &__tab {
-    box-shadow: unset;
-    background-color: var(--tui-base-02);
-    height: 30px;
-    margin-bottom: 3px;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid var(--tui-base-04);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
+  &__header {
+    padding: 0 10px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--tui-base-03);
+
+    .logo {
+      margin-right: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .tabs {
+      box-shadow: unset;
+      height: 36px;
+      font-size: 11px;
+
+      &__btn {
+        padding: 0 10px;
+        margin: unset;
+      }
+
+      &__btn._active {
+        height: 80%;
+        background: var(--tui-base-03);
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
+        margin-top: auto;
+      }
+    }
+
+    .toolbar {
+      margin-left: auto;
+      display: flex;
+
+      &__btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 10px;
+        cursor: pointer;
+        color: var(--tui-base-05);
+
+        &:hover {
+          background-color: var(--tui-base-03);
+        }
+      }
+    }
   }
 
-  &__btn {
-    padding: 0 20px;
-    background: var(--tui-base-03);
-    height: 30px;
-    margin: unset;
+  &__footer {
+    padding: 0 10px;
+    height: 23px;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid var(--tui-base-03);
+  }
 
-    &._active {
-      background: var(--tui-base-04);
+  &__body {
+    display: flex;
+    height: 100%;
+
+    .code-zone {
+      width: calc(100% - 30px);
+    }
+
+    .extensions {
+      width: 30px;
+      height: 100%;
+      border-right: 1px solid var(--tui-base-04);
     }
   }
 }
