--- a/apps/mix-portal/src/app/routes/portal/list-template/folder-files/file.component.html
+++ b/apps/mix-portal/src/app/routes/portal/list-template/folder-files/file.component.html
@@ -10,10 +10,11 @@
       <tui-svg src="tuiIconChevronRight"></tui-svg>
     </div>
     <i-tabler class="icon"
-              name="file-import"></i-tabler>
-    <div class="title"> {{ folderType }} <span *ngIf="!!!(loading$ | async); else loading">({{ result.pagingData.total ?? 0 }})</span>
+              name="folder"></i-tabler>
+    <div class="title"> {{ folderType }} <span *ngIf="!!!(loading$ | async); else loading">({{ result.pagingData.total
+        ?? 0 }})</span>
       <ng-template #loading>
-        loading
+        loading...
       </ng-template>
     </div>
     <div class="separator"></div>
