--- a/apps/mix-portal/src/app/routes/portal/list-template/folder-files/file.component.scss
+++ b/apps/mix-portal/src/app/routes/portal/list-template/folder-files/file.component.scss
@@ -43,7 +43,8 @@
     cursor: pointer;
 
     .checkbox {
-      margin-right: 5px;
+      margin-right: 0.5rem;
+      margin-left: 0.5rem;
     }
 
     .date-modified {
@@ -58,8 +59,8 @@
       display: block;
       content: '';
       position: absolute;
-      border-bottom: 1px dotted black;
-      width: 10px;
+      border-bottom: 1px solid var(--tui-base-04);
+      width: 1rem;
       height: 1px;
       left: -15px;
       top: 50%;
@@ -69,10 +70,10 @@
       display: block;
       content: '';
       position: absolute;
-      height: 100%;
-      border-right: 1px dashed black;
-      left: -17px;
-      top: -50%;
+      height: 160%;
+      border-right: 1px solid var(--tui-base-04);
+      left: -15px;
+      top: -110%;
     }
   }
 
