--- a/apps/mix-portal/src/app/routes/portal/post/list/list-post.component.scss
+++ b/apps/mix-portal/src/app/routes/portal/post/list/list-post.component.scss
@@ -4,7 +4,12 @@ mix-data-table {
 
 .list-post {
   &__header {
-    background-color: #f0f4f9;
+    background-color: hsla(
+      var(--primary-hover-color-hue, 211),
+      var(--primary-hover-color-saturation, 100%),
+      var(--primary-hover-color-brightness, 70%),
+      0.2
+    );
     height: 100%;
     display: flex;
     align-items: center;
