--- a/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.scss
+++ b/libs/mix.share/src/components/mix-polymorpheus-list/mix-polymorpheus-list.component.scss
@@ -1,55 +1,60 @@
 mix-data-table {
-    width: 100%;
+  width: 100%;
 }
 
 .polymorphous-list {
+  width: 100%;
+  height: 100%;
+  &__header {
+    background-color: hsla(
+      var(--primary-hover-color-hue, 211),
+      var(--primary-hover-color-saturation, 100%),
+      var(--primary-hover-color-brightness, 70%),
+      0.2
+    );
+    display: flex;
+    align-items: center;
+    padding: 5px 15px;
+    border-bottom: 1px solid var(--tui-base-04);
+    .separator {
+      content: '';
+      display: block;
+      height: 60%;
+      width: 1px;
+      background-color: var(--tui-base-04);
+      margin: 0 15px 0 25px;
+    }
+    .toggle-left-side {
+      margin-left: auto;
+    }
+  }
+  &__container {
+    display: flex;
+    width: 100%;
+    // 100px for header + toolbar
+    height: calc(100vh - 100px);
+  }
+  &__main-workspace {
     width: 100%;
     height: 100%;
-    &__header {
-        background-color: #f0f4f9;
-        display: flex;
-        align-items: center;
-        padding: 5px 15px;
-        border-bottom: 1px solid var(--tui-base-04);
-        .separator {
-            content: '';
-            display: block;
-            height: 60%;
-            width: 1px;
-            background-color: var(--tui-base-04);
-            margin: 0 15px 0 25px;
-        }
-        .toggle-left-side {
-            margin-left: auto;
-        }
+  }
+  &__left-side {
+    width: 350px;
+    border-left: 1px solid var(--tui-base-04);
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    .filter {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 10px;
+      // border: 1px solid var(--tui-base-04);
+      [tuiLabel] {
+        margin-bottom: 15px;
+      }
     }
-    &__container {
-        display: flex;
-        width: 100%;
-        // 100px for header + toolbar
-        height: calc(100vh - 100px);
+    .chatbox {
+      margin-top: 20px;
     }
-    &__main-workspace {
-        width: 100%;
-        height: 100%;
-    }
-    &__left-side {
-        width: 350px;
-        border-left: 1px solid var(--tui-base-04);
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        .filter {
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 10px;
-            // border: 1px solid var(--tui-base-04);
-            [tuiLabel] {
-                margin-bottom: 15px;
-            }
-        }
-        .chatbox {
-            margin-top: 20px;
-        }
-    }
+  }
 }
