--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -34,12 +34,19 @@
     align-items: center;
     cursor: pointer;
     border-radius: var(--tui-radius-l);
+    color: var(--tui-primary);
     &:hover {
       background-color: var(--tui-primary-hover);
+      color: var(--tui-text-01-night);
     }
     &.--active {
-      background-color: var(--tui-primary-active);
-      color: var(--tui-text-01-night);
+      background-color: hsla(
+        var(--primary-hover-color-hue, 211),
+        var(--primary-hover-color-saturation, 100%),
+        var(--primary-hover-color-brightness, 70%),
+        0.2
+      );
+      color: var(--tui-primary);
     }
   }
   &__level-2 {
