--- a/libs/mix.ui/src/lib/inline-edit-placeholder/inline-edit-placeholder.component.html
+++ b/libs/mix.ui/src/lib/inline-edit-placeholder/inline-edit-placeholder.component.html
@@ -1,7 +1,7 @@
-<div class="inline-input-placeholder">
+<div class="inline-input-placeholder tui-text_body-l">
   <div *ngIf="!editing"
        class="inline-input-placeholder__value"> {{ value$ | async }}
-    <button [appearance]="'outline'"
+    <button [appearance]="'flat'"
             [icon]="'tuiIconEdit'"
             [size]="'xs'"
             (click)="enableEdit()"
