--- a/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
+++ b/libs/mix.share/src/components/dialogs/creation-dialog/creation-dialog.component.scss
@@ -19,7 +19,12 @@
 
     .toolbar {
       height: var(--mix-sub-header-height);
-      background-color: var(--tui-base-03);
+      background-color: hsla(
+        var(--primary-hover-color-hue, 211),
+        var(--primary-hover-color-saturation, 100%),
+        var(--primary-hover-color-brightness, 70%),
+        0.2
+      );
       display: flex;
       align-items: center;
       justify-content: flex-end;
