--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -34,7 +34,7 @@
     align-items: center;
     cursor: pointer;
     border-radius: var(--tui-radius-l);
-    color: var(--tui-primary);
+    color: var(--tui-base-08);
     &:hover {
       background-color: var(--tui-primary-hover);
       color: var(--tui-text-01-night);
