--- a/apps/mix-portal/src/styles/variables.scss
+++ b/apps/mix-portal/src/styles/variables.scss
@@ -8,4 +8,6 @@
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   --mix-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   --mix-border-radius-01: 10px;
+  --mix-border-radius-02: 15px;
+  --mix-body-background: #f0f2f5;
 }
