--- a/apps/mix-portal/src/app/routes/portal/portal.layout.scss
+++ b/apps/mix-portal/src/app/routes/portal/portal.layout.scss
@@ -7,9 +7,10 @@
 
   &__workspace {
     width: 100%;
-    border-left: 1px solid var(--tui-base-03);
+    border-left: 1px solid var(--tui-base-04);
     border-top-left-radius: var(--mix-border-radius-02);
     background-color: #fff;
+    box-shadow: var(--sidebar-box-shadow);
   }
 
   &__main-workspace {
