--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -107,6 +107,33 @@
     border-radius: 12px;
   }
 
+  &__expand-icon {
+    position: absolute;
+    bottom: 50px;
+    right: -15px;
+    width: 30px;
+    height: 30px;
+    z-index: 5;
+    background-color: var(--mix-body-background);
+    border-radius: 50%;
+    border: 1px solid var(--tui-base-04);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    opacity: 0.7;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    i-tabler {
+      width: 18px;
+      height: 18px;
+      transform: rotate(180deg);
+    }
+  }
+
   .separator {
     content: '';
     display: block;
