--- a/libs/mix.share/src/components/template-editor/template-editor.component.scss
+++ b/libs/mix.share/src/components/template-editor/template-editor.component.scss
@@ -62,6 +62,7 @@
     display: flex;
     align-items: center;
     border-top: 1px solid var(--tui-base-03);
+    font-size: 10px;
   }
 
   &__body {
@@ -76,6 +77,11 @@
       width: 30px;
       height: 100%;
       border-right: 1px solid var(--tui-base-04);
+    }
+
+    &.--minimize {
+      height: 0;
+      overflow: hidden;
     }
   }
 }
