--- a/libs/mix.share/src/components/template-editor/template-editor.component.scss
+++ b/libs/mix.share/src/components/template-editor/template-editor.component.scss
@@ -53,6 +53,10 @@
           background-color: var(--tui-base-03);
         }
       }
+
+      &__save-btn {
+        margin: 0 3px;
+      }
     }
   }
 
