feat(template): save template when changes

--- a/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.html
+++ b/apps/mix-portal/src/app/routes/portal/post/detail/post-detail.component.html
@@ -116,7 +116,7 @@
           {{ item.fileName }}
         </ng-template>
 
-        <p style="margin-top: 15px;"> Template preview: </p>
+        <p style="margin-top: 5px;"> </p>
         <mix-template-editor *ngIf="selectedTemplate"
                              [disabled]="true"
                              [templateId]="selectedTemplate.id"></mix-template-editor>
