--- a/apps/mix-portal/src/styles/utilities.scss
+++ b/apps/mix-portal/src/styles/utilities.scss
@@ -53,12 +53,7 @@
   height: 100%;
 
   &__header {
-    background-color: hsla(
-      var(--primary-hover-color-hue, 211),
-      var(--primary-hover-color-saturation, 100%),
-      var(--primary-hover-color-brightness, 70%),
-      0.2
-    );
+    background-color: var(--mix-primary);
     display: flex;
     align-items: center;
     justify-content: flex-start;
