--- a/apps/mix-portal/src/styles/variables.scss
+++ b/apps/mix-portal/src/styles/variables.scss
@@ -10,4 +10,6 @@
   --mix-border-radius-01: 10px;
   --mix-border-radius-02: 15px;
   --mix-body-background: #f0f2f5;
+  --mix-primary: #0f92f3;
+  --mix-toolbar-color: #fff;
 }
