--- a/libs/mix.share/src/components/mix-database-visualize/mix-database-visualize.component.scss
+++ b/libs/mix.share/src/components/mix-database-visualize/mix-database-visualize.component.scss
@@ -9,12 +9,7 @@
     justify-content: flex-start;
     padding: 10px;
     box-sizing: border-box;
-    background-color: hsla(
-      var(--primary-hover-color-hue, 211),
-      var(--primary-hover-color-saturation, 100%),
-      var(--primary-hover-color-brightness, 70%),
-      0.2
-    );
+    background-color: var(--mix-primary);
 
     .action {
       margin-right: 15px;
