--- a/apps/mix-portal/src/styles/overwrite.scss
+++ b/apps/mix-portal/src/styles/overwrite.scss
@@ -56,12 +56,7 @@
   --tui-base-07: #808080; // inverted background
   --tui-base-08: #333; // dark interface icons
   --tui-base-09: #000; // icons on inverted background
-  --tui-primary: hsla(
-    var(--primary-color-hue, 211),
-    var(--primary-color-saturation, 100%),
-    var(--primary-color-brightness, 50%),
-    1
-  ); // primary buttons, background
+  --tui-primary: var(--mix-primary); // primary buttons, background
   --tui-primary-hover: hsla(
     var(--primary-hover-color-hue, 211),
     var(--primary-hover-color-saturation, 100%),
